--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -4,7 +4,7 @@
   <div class="mb-5">
     <h1>Все посты пользователя {{ author.get_full_name }} </h1>
     <h3>Всего постов: {{ author.posts.count }} </h3>
-    {% if request.user != author %}
+    {% if request.user != author and request.user.is_authenticated %}
         {% if following %}
             <a
               class="btn btn-lg btn-light"
